<resources>
    <string name="app_name">doidodai</string>
    <string name="author">Lê Quốc Toàn</string>
    <string name="computer">Desktop</string>
    <string name="textbox_hint">Nhập chiều dài</string>
    <string name="haili_unit">Hải Lý</string>
    <string name="dam_unit">Dặm</string>
    <string name="kilometer_unit">Kilometer</string>
    <string name="ly_unit">Lý</string>
    <string name="met_unit">Met</string>
    <string name="yard_unit">Yard</string>
    <string name="foot_unit">Foot</string>
    <string name="inches_unit">Inches</string>
</resources>