<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        >

        <EditText
            android:id="@+id/txtNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textbox_hint"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/spnUnit"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1" />

    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:text="Tương đương với"
        android:background="#4A804C"
        android:textColor="#FFDD36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/lblhaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haili_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/lbldam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dam_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />


            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/lblkilometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometer_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />


            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/lblly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ly_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/lblmet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/met_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />


            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/lblyard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yard_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/lblfoot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foot_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />


            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/lblinches"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inches_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />



            </TableRow>

        </TableLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>